tests with different weights

--- a/train.ipynb
+++ b/train.ipynb
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "5c729258",
    "metadata": {},
    "outputs": [
@@ -895,7 +895,7 @@
        " 'list_models']"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -911,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 80,
    "id": "4f30795a",
    "metadata": {},
    "outputs": [
@@ -999,6 +999,8 @@
       "Using cache found in /home/antonio/.cache/torch/hub/pytorch_vision_main\n",
       "Using cache found in /home/antonio/.cache/torch/hub/pytorch_vision_main\n",
       "Using cache found in /home/antonio/.cache/torch/hub/pytorch_vision_main\n",
+      "/home/antonio/miniconda3/envs/ml/lib/python3.11/site-packages/torch/functional.py:507: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at ../aten/src/ATen/native/TensorShape.cpp:3549.)\n",
+      "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n",
       "Using cache found in /home/antonio/.cache/torch/hub/pytorch_vision_main\n",
       "Using cache found in /home/antonio/.cache/torch/hub/pytorch_vision_main\n",
       "Using cache found in /home/antonio/.cache/torch/hub/pytorch_vision_main\n"
@@ -1034,20 +1036,27 @@
     "        for weight in weight_enum:\n",
     "            model = getattr(torchvision.models, model_name)(weights=weight)\n",
     "            num_params = sum(p.numel() for p in model.parameters())\n",
-    "            model_params[f'{model_name}_{weight}'] = num_params\n",
+    "\n",
+    "            # remove model name from weight\n",
+    "            weight = str(weight).split('.')[-1]\n",
+    "            model_params[f'{model_name}_{weight}'] = {'num_params': num_params}\n",
+    "            \n",
+    "    \n",
+    "            \n",
+    "\n",
     "    except Exception as e:\n",
     "        print(f'Error for {model_name}: {e}')\n",
     "\n",
     "\n",
     "# sort models by number of parameters\n",
-    "sorted_models = sorted(model_params.items(), key=lambda x: x[1], reverse=True)\n",
+    "sorted_models = sorted(model_params.items(), key=lambda x: x[1]['num_params'], reverse=True)\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 81,
    "id": "ac959efe",
    "metadata": {},
    "outputs": [
@@ -1055,138 +1064,146 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "regnet_y_128gf_RegNet_Y_128GF_Weights.IMAGENET1K_SWAG_E2E_V1: 644.81M\n",
-      "regnet_y_128gf_RegNet_Y_128GF_Weights.IMAGENET1K_SWAG_LINEAR_V1: 644.81M\n",
-      "vit_h_14_ViT_H_14_Weights.IMAGENET1K_SWAG_E2E_V1: 633.47M\n",
-      "vit_h_14_ViT_H_14_Weights.IMAGENET1K_SWAG_LINEAR_V1: 632.05M\n",
-      "vit_l_32_ViT_L_32_Weights.IMAGENET1K_V1: 306.54M\n",
-      "vit_l_16_ViT_L_16_Weights.IMAGENET1K_SWAG_E2E_V1: 305.17M\n",
-      "vit_l_16_ViT_L_16_Weights.IMAGENET1K_V1: 304.33M\n",
-      "vit_l_16_ViT_L_16_Weights.IMAGENET1K_SWAG_LINEAR_V1: 304.33M\n",
-      "convnext_large_ConvNeXt_Large_Weights.IMAGENET1K_V1: 197.77M\n",
-      "regnet_y_32gf_RegNet_Y_32GF_Weights.IMAGENET1K_V1: 145.05M\n",
-      "regnet_y_32gf_RegNet_Y_32GF_Weights.IMAGENET1K_V2: 145.05M\n",
-      "regnet_y_32gf_RegNet_Y_32GF_Weights.IMAGENET1K_SWAG_E2E_V1: 145.05M\n",
-      "regnet_y_32gf_RegNet_Y_32GF_Weights.IMAGENET1K_SWAG_LINEAR_V1: 145.05M\n",
-      "vgg19_bn_VGG19_BN_Weights.IMAGENET1K_V1: 143.68M\n",
-      "vgg19_VGG19_Weights.IMAGENET1K_V1: 143.67M\n",
-      "vgg16_bn_VGG16_BN_Weights.IMAGENET1K_V1: 138.37M\n",
-      "vgg16_VGG16_Weights.IMAGENET1K_V1: 138.36M\n",
-      "vgg16_VGG16_Weights.IMAGENET1K_FEATURES: 138.36M\n",
-      "vgg13_bn_VGG13_BN_Weights.IMAGENET1K_V1: 133.05M\n",
-      "vgg13_VGG13_Weights.IMAGENET1K_V1: 133.05M\n",
-      "vgg11_bn_VGG11_BN_Weights.IMAGENET1K_V1: 132.87M\n",
-      "vgg11_VGG11_Weights.IMAGENET1K_V1: 132.86M\n",
-      "wide_resnet101_2_Wide_ResNet101_2_Weights.IMAGENET1K_V1: 126.89M\n",
-      "wide_resnet101_2_Wide_ResNet101_2_Weights.IMAGENET1K_V2: 126.89M\n",
-      "efficientnet_v2_l_EfficientNet_V2_L_Weights.IMAGENET1K_V1: 118.52M\n",
-      "regnet_x_32gf_RegNet_X_32GF_Weights.IMAGENET1K_V1: 107.81M\n",
-      "regnet_x_32gf_RegNet_X_32GF_Weights.IMAGENET1K_V2: 107.81M\n",
-      "resnext101_32x8d_ResNeXt101_32X8D_Weights.IMAGENET1K_V1: 88.79M\n",
-      "resnext101_32x8d_ResNeXt101_32X8D_Weights.IMAGENET1K_V2: 88.79M\n",
-      "convnext_base_ConvNeXt_Base_Weights.IMAGENET1K_V1: 88.59M\n",
-      "vit_b_32_ViT_B_32_Weights.IMAGENET1K_V1: 88.22M\n",
-      "swin_v2_b_Swin_V2_B_Weights.IMAGENET1K_V1: 87.93M\n",
-      "swin_b_Swin_B_Weights.IMAGENET1K_V1: 87.77M\n",
-      "vit_b_16_ViT_B_16_Weights.IMAGENET1K_SWAG_E2E_V1: 86.86M\n",
-      "vit_b_16_ViT_B_16_Weights.IMAGENET1K_V1: 86.57M\n",
-      "vit_b_16_ViT_B_16_Weights.IMAGENET1K_SWAG_LINEAR_V1: 86.57M\n",
-      "regnet_y_16gf_RegNet_Y_16GF_Weights.IMAGENET1K_V1: 83.59M\n",
-      "regnet_y_16gf_RegNet_Y_16GF_Weights.IMAGENET1K_V2: 83.59M\n",
-      "regnet_y_16gf_RegNet_Y_16GF_Weights.IMAGENET1K_SWAG_E2E_V1: 83.59M\n",
-      "regnet_y_16gf_RegNet_Y_16GF_Weights.IMAGENET1K_SWAG_LINEAR_V1: 83.59M\n",
-      "resnext101_64x4d_ResNeXt101_64X4D_Weights.IMAGENET1K_V1: 83.46M\n",
-      "wide_resnet50_2_Wide_ResNet50_2_Weights.IMAGENET1K_V1: 68.88M\n",
-      "wide_resnet50_2_Wide_ResNet50_2_Weights.IMAGENET1K_V2: 68.88M\n",
-      "efficientnet_b7_EfficientNet_B7_Weights.IMAGENET1K_V1: 66.35M\n",
-      "alexnet_AlexNet_Weights.IMAGENET1K_V1: 61.10M\n",
-      "resnet152_ResNet152_Weights.IMAGENET1K_V1: 60.19M\n",
-      "resnet152_ResNet152_Weights.IMAGENET1K_V2: 60.19M\n",
-      "regnet_x_16gf_RegNet_X_16GF_Weights.IMAGENET1K_V1: 54.28M\n",
-      "regnet_x_16gf_RegNet_X_16GF_Weights.IMAGENET1K_V2: 54.28M\n",
-      "efficientnet_v2_m_EfficientNet_V2_M_Weights.IMAGENET1K_V1: 54.14M\n",
-      "convnext_small_ConvNeXt_Small_Weights.IMAGENET1K_V1: 50.22M\n",
-      "swin_v2_s_Swin_V2_S_Weights.IMAGENET1K_V1: 49.74M\n",
-      "swin_s_Swin_S_Weights.IMAGENET1K_V1: 49.61M\n",
-      "resnet101_ResNet101_Weights.IMAGENET1K_V1: 44.55M\n",
-      "resnet101_ResNet101_Weights.IMAGENET1K_V2: 44.55M\n",
-      "efficientnet_b6_EfficientNet_B6_Weights.IMAGENET1K_V1: 43.04M\n",
-      "regnet_x_8gf_RegNet_X_8GF_Weights.IMAGENET1K_V1: 39.57M\n",
-      "regnet_x_8gf_RegNet_X_8GF_Weights.IMAGENET1K_V2: 39.57M\n",
-      "regnet_y_8gf_RegNet_Y_8GF_Weights.IMAGENET1K_V1: 39.38M\n",
-      "regnet_y_8gf_RegNet_Y_8GF_Weights.IMAGENET1K_V2: 39.38M\n",
-      "maxvit_t_MaxVit_T_Weights.IMAGENET1K_V1: 30.92M\n",
-      "efficientnet_b5_EfficientNet_B5_Weights.IMAGENET1K_V1: 30.39M\n",
-      "densenet161_DenseNet161_Weights.IMAGENET1K_V1: 28.68M\n",
-      "convnext_tiny_ConvNeXt_Tiny_Weights.IMAGENET1K_V1: 28.59M\n",
-      "swin_v2_t_Swin_V2_T_Weights.IMAGENET1K_V1: 28.35M\n",
-      "swin_t_Swin_T_Weights.IMAGENET1K_V1: 28.29M\n",
-      "inception_v3_Inception_V3_Weights.IMAGENET1K_V1: 27.16M\n",
-      "resnet50_ResNet50_Weights.IMAGENET1K_V1: 25.56M\n",
-      "resnet50_ResNet50_Weights.IMAGENET1K_V2: 25.56M\n",
-      "resnext50_32x4d_ResNeXt50_32X4D_Weights.IMAGENET1K_V1: 25.03M\n",
-      "resnext50_32x4d_ResNeXt50_32X4D_Weights.IMAGENET1K_V2: 25.03M\n",
-      "resnet34_ResNet34_Weights.IMAGENET1K_V1: 21.80M\n",
-      "efficientnet_v2_s_EfficientNet_V2_S_Weights.IMAGENET1K_V1: 21.46M\n",
-      "densenet201_DenseNet201_Weights.IMAGENET1K_V1: 20.01M\n",
-      "regnet_y_3_2gf_RegNet_Y_3_2GF_Weights.IMAGENET1K_V1: 19.44M\n",
-      "regnet_y_3_2gf_RegNet_Y_3_2GF_Weights.IMAGENET1K_V2: 19.44M\n",
-      "efficientnet_b4_EfficientNet_B4_Weights.IMAGENET1K_V1: 19.34M\n",
-      "regnet_x_3_2gf_RegNet_X_3_2GF_Weights.IMAGENET1K_V1: 15.30M\n",
-      "regnet_x_3_2gf_RegNet_X_3_2GF_Weights.IMAGENET1K_V2: 15.30M\n",
-      "densenet169_DenseNet169_Weights.IMAGENET1K_V1: 14.15M\n",
-      "efficientnet_b3_EfficientNet_B3_Weights.IMAGENET1K_V1: 12.23M\n",
-      "resnet18_ResNet18_Weights.IMAGENET1K_V1: 11.69M\n",
-      "regnet_y_1_6gf_RegNet_Y_1_6GF_Weights.IMAGENET1K_V1: 11.20M\n",
-      "regnet_y_1_6gf_RegNet_Y_1_6GF_Weights.IMAGENET1K_V2: 11.20M\n",
-      "regnet_x_1_6gf_RegNet_X_1_6GF_Weights.IMAGENET1K_V1: 9.19M\n",
-      "regnet_x_1_6gf_RegNet_X_1_6GF_Weights.IMAGENET1K_V2: 9.19M\n",
-      "efficientnet_b2_EfficientNet_B2_Weights.IMAGENET1K_V1: 9.11M\n",
-      "densenet121_DenseNet121_Weights.IMAGENET1K_V1: 7.98M\n",
-      "efficientnet_b1_EfficientNet_B1_Weights.IMAGENET1K_V1: 7.79M\n",
-      "efficientnet_b1_EfficientNet_B1_Weights.IMAGENET1K_V2: 7.79M\n",
-      "shufflenet_v2_x2_0_ShuffleNet_V2_X2_0_Weights.IMAGENET1K_V1: 7.39M\n",
-      "regnet_x_800mf_RegNet_X_800MF_Weights.IMAGENET1K_V1: 7.26M\n",
-      "regnet_x_800mf_RegNet_X_800MF_Weights.IMAGENET1K_V2: 7.26M\n",
-      "googlenet_GoogLeNet_Weights.IMAGENET1K_V1: 6.62M\n",
-      "regnet_y_800mf_RegNet_Y_800MF_Weights.IMAGENET1K_V1: 6.43M\n",
-      "regnet_y_800mf_RegNet_Y_800MF_Weights.IMAGENET1K_V2: 6.43M\n",
-      "mnasnet1_3_MNASNet1_3_Weights.IMAGENET1K_V1: 6.28M\n",
-      "regnet_x_400mf_RegNet_X_400MF_Weights.IMAGENET1K_V1: 5.50M\n",
-      "regnet_x_400mf_RegNet_X_400MF_Weights.IMAGENET1K_V2: 5.50M\n",
-      "mobilenet_v3_large_MobileNet_V3_Large_Weights.IMAGENET1K_V1: 5.48M\n",
-      "mobilenet_v3_large_MobileNet_V3_Large_Weights.IMAGENET1K_V2: 5.48M\n",
-      "efficientnet_b0_EfficientNet_B0_Weights.IMAGENET1K_V1: 5.29M\n",
-      "mnasnet1_0_MNASNet1_0_Weights.IMAGENET1K_V1: 4.38M\n",
-      "regnet_y_400mf_RegNet_Y_400MF_Weights.IMAGENET1K_V1: 4.34M\n",
-      "regnet_y_400mf_RegNet_Y_400MF_Weights.IMAGENET1K_V2: 4.34M\n",
-      "mobilenet_v2_MobileNet_V2_Weights.IMAGENET1K_V1: 3.50M\n",
-      "mobilenet_v2_MobileNet_V2_Weights.IMAGENET1K_V2: 3.50M\n",
-      "shufflenet_v2_x1_5_ShuffleNet_V2_X1_5_Weights.IMAGENET1K_V1: 3.50M\n",
-      "mnasnet0_75_MNASNet0_75_Weights.IMAGENET1K_V1: 3.17M\n",
-      "mobilenet_v3_small_MobileNet_V3_Small_Weights.IMAGENET1K_V1: 2.54M\n",
-      "shufflenet_v2_x1_0_ShuffleNet_V2_X1_0_Weights.IMAGENET1K_V1: 2.28M\n",
-      "mnasnet0_5_MNASNet0_5_Weights.IMAGENET1K_V1: 2.22M\n",
-      "shufflenet_v2_x0_5_ShuffleNet_V2_X0_5_Weights.IMAGENET1K_V1: 1.37M\n",
-      "squeezenet1_0_SqueezeNet1_0_Weights.IMAGENET1K_V1: 1.25M\n",
-      "squeezenet1_1_SqueezeNet1_1_Weights.IMAGENET1K_V1: 1.24M\n"
+      "regnet_y_128gf_IMAGENET1K_SWAG_E2E_V1: 644.81M\n",
+      "regnet_y_128gf_IMAGENET1K_SWAG_LINEAR_V1: 644.81M\n",
+      "vit_h_14_IMAGENET1K_SWAG_E2E_V1: 633.47M\n",
+      "vit_h_14_IMAGENET1K_SWAG_LINEAR_V1: 632.05M\n",
+      "vit_l_32_IMAGENET1K_V1: 306.54M\n",
+      "vit_l_16_IMAGENET1K_SWAG_E2E_V1: 305.17M\n",
+      "vit_l_16_IMAGENET1K_V1: 304.33M\n",
+      "vit_l_16_IMAGENET1K_SWAG_LINEAR_V1: 304.33M\n",
+      "convnext_large_IMAGENET1K_V1: 197.77M\n",
+      "regnet_y_32gf_IMAGENET1K_V1: 145.05M\n",
+      "regnet_y_32gf_IMAGENET1K_V2: 145.05M\n",
+      "regnet_y_32gf_IMAGENET1K_SWAG_E2E_V1: 145.05M\n",
+      "regnet_y_32gf_IMAGENET1K_SWAG_LINEAR_V1: 145.05M\n",
+      "vgg19_bn_IMAGENET1K_V1: 143.68M\n",
+      "vgg19_IMAGENET1K_V1: 143.67M\n",
+      "vgg16_bn_IMAGENET1K_V1: 138.37M\n",
+      "vgg16_IMAGENET1K_V1: 138.36M\n",
+      "vgg16_IMAGENET1K_FEATURES: 138.36M\n",
+      "vgg13_bn_IMAGENET1K_V1: 133.05M\n",
+      "vgg13_IMAGENET1K_V1: 133.05M\n",
+      "vgg11_bn_IMAGENET1K_V1: 132.87M\n",
+      "vgg11_IMAGENET1K_V1: 132.86M\n",
+      "wide_resnet101_2_IMAGENET1K_V1: 126.89M\n",
+      "wide_resnet101_2_IMAGENET1K_V2: 126.89M\n",
+      "efficientnet_v2_l_IMAGENET1K_V1: 118.52M\n",
+      "regnet_x_32gf_IMAGENET1K_V1: 107.81M\n",
+      "regnet_x_32gf_IMAGENET1K_V2: 107.81M\n",
+      "resnext101_32x8d_IMAGENET1K_V1: 88.79M\n",
+      "resnext101_32x8d_IMAGENET1K_V2: 88.79M\n",
+      "convnext_base_IMAGENET1K_V1: 88.59M\n",
+      "vit_b_32_IMAGENET1K_V1: 88.22M\n",
+      "swin_v2_b_IMAGENET1K_V1: 87.93M\n",
+      "swin_b_IMAGENET1K_V1: 87.77M\n",
+      "vit_b_16_IMAGENET1K_SWAG_E2E_V1: 86.86M\n",
+      "vit_b_16_IMAGENET1K_V1: 86.57M\n",
+      "vit_b_16_IMAGENET1K_SWAG_LINEAR_V1: 86.57M\n",
+      "regnet_y_16gf_IMAGENET1K_V1: 83.59M\n",
+      "regnet_y_16gf_IMAGENET1K_V2: 83.59M\n",
+      "regnet_y_16gf_IMAGENET1K_SWAG_E2E_V1: 83.59M\n",
+      "regnet_y_16gf_IMAGENET1K_SWAG_LINEAR_V1: 83.59M\n",
+      "resnext101_64x4d_IMAGENET1K_V1: 83.46M\n",
+      "wide_resnet50_2_IMAGENET1K_V1: 68.88M\n",
+      "wide_resnet50_2_IMAGENET1K_V2: 68.88M\n",
+      "efficientnet_b7_IMAGENET1K_V1: 66.35M\n",
+      "alexnet_IMAGENET1K_V1: 61.10M\n",
+      "resnet152_IMAGENET1K_V1: 60.19M\n",
+      "resnet152_IMAGENET1K_V2: 60.19M\n",
+      "regnet_x_16gf_IMAGENET1K_V1: 54.28M\n",
+      "regnet_x_16gf_IMAGENET1K_V2: 54.28M\n",
+      "efficientnet_v2_m_IMAGENET1K_V1: 54.14M\n",
+      "convnext_small_IMAGENET1K_V1: 50.22M\n",
+      "swin_v2_s_IMAGENET1K_V1: 49.74M\n",
+      "swin_s_IMAGENET1K_V1: 49.61M\n",
+      "resnet101_IMAGENET1K_V1: 44.55M\n",
+      "resnet101_IMAGENET1K_V2: 44.55M\n",
+      "efficientnet_b6_IMAGENET1K_V1: 43.04M\n",
+      "regnet_x_8gf_IMAGENET1K_V1: 39.57M\n",
+      "regnet_x_8gf_IMAGENET1K_V2: 39.57M\n",
+      "regnet_y_8gf_IMAGENET1K_V1: 39.38M\n",
+      "regnet_y_8gf_IMAGENET1K_V2: 39.38M\n",
+      "maxvit_t_IMAGENET1K_V1: 30.92M\n",
+      "efficientnet_b5_IMAGENET1K_V1: 30.39M\n",
+      "densenet161_IMAGENET1K_V1: 28.68M\n",
+      "convnext_tiny_IMAGENET1K_V1: 28.59M\n",
+      "swin_v2_t_IMAGENET1K_V1: 28.35M\n",
+      "swin_t_IMAGENET1K_V1: 28.29M\n",
+      "inception_v3_IMAGENET1K_V1: 27.16M\n",
+      "resnet50_IMAGENET1K_V1: 25.56M\n",
+      "resnet50_IMAGENET1K_V2: 25.56M\n",
+      "resnext50_32x4d_IMAGENET1K_V1: 25.03M\n",
+      "resnext50_32x4d_IMAGENET1K_V2: 25.03M\n",
+      "resnet34_IMAGENET1K_V1: 21.80M\n",
+      "efficientnet_v2_s_IMAGENET1K_V1: 21.46M\n",
+      "densenet201_IMAGENET1K_V1: 20.01M\n",
+      "regnet_y_3_2gf_IMAGENET1K_V1: 19.44M\n",
+      "regnet_y_3_2gf_IMAGENET1K_V2: 19.44M\n",
+      "efficientnet_b4_IMAGENET1K_V1: 19.34M\n",
+      "regnet_x_3_2gf_IMAGENET1K_V1: 15.30M\n",
+      "regnet_x_3_2gf_IMAGENET1K_V2: 15.30M\n",
+      "densenet169_IMAGENET1K_V1: 14.15M\n",
+      "efficientnet_b3_IMAGENET1K_V1: 12.23M\n",
+      "resnet18_IMAGENET1K_V1: 11.69M\n",
+      "regnet_y_1_6gf_IMAGENET1K_V1: 11.20M\n",
+      "regnet_y_1_6gf_IMAGENET1K_V2: 11.20M\n",
+      "regnet_x_1_6gf_IMAGENET1K_V1: 9.19M\n",
+      "regnet_x_1_6gf_IMAGENET1K_V2: 9.19M\n",
+      "efficientnet_b2_IMAGENET1K_V1: 9.11M\n",
+      "densenet121_IMAGENET1K_V1: 7.98M\n",
+      "efficientnet_b1_IMAGENET1K_V1: 7.79M\n",
+      "efficientnet_b1_IMAGENET1K_V2: 7.79M\n",
+      "shufflenet_v2_x2_0_IMAGENET1K_V1: 7.39M\n",
+      "regnet_x_800mf_IMAGENET1K_V1: 7.26M\n",
+      "regnet_x_800mf_IMAGENET1K_V2: 7.26M\n",
+      "googlenet_IMAGENET1K_V1: 6.62M\n",
+      "regnet_y_800mf_IMAGENET1K_V1: 6.43M\n",
+      "regnet_y_800mf_IMAGENET1K_V2: 6.43M\n",
+      "mnasnet1_3_IMAGENET1K_V1: 6.28M\n",
+      "regnet_x_400mf_IMAGENET1K_V1: 5.50M\n",
+      "regnet_x_400mf_IMAGENET1K_V2: 5.50M\n",
+      "mobilenet_v3_large_IMAGENET1K_V1: 5.48M\n",
+      "mobilenet_v3_large_IMAGENET1K_V2: 5.48M\n",
+      "efficientnet_b0_IMAGENET1K_V1: 5.29M\n",
+      "mnasnet1_0_IMAGENET1K_V1: 4.38M\n",
+      "regnet_y_400mf_IMAGENET1K_V1: 4.34M\n",
+      "regnet_y_400mf_IMAGENET1K_V2: 4.34M\n",
+      "mobilenet_v2_IMAGENET1K_V1: 3.50M\n",
+      "mobilenet_v2_IMAGENET1K_V2: 3.50M\n",
+      "shufflenet_v2_x1_5_IMAGENET1K_V1: 3.50M\n",
+      "mnasnet0_75_IMAGENET1K_V1: 3.17M\n",
+      "mobilenet_v3_small_IMAGENET1K_V1: 2.54M\n",
+      "shufflenet_v2_x1_0_IMAGENET1K_V1: 2.28M\n",
+      "mnasnet0_5_IMAGENET1K_V1: 2.22M\n",
+      "shufflenet_v2_x0_5_IMAGENET1K_V1: 1.37M\n",
+      "squeezenet1_0_IMAGENET1K_V1: 1.25M\n",
+      "squeezenet1_1_IMAGENET1K_V1: 1.24M\n"
      ]
     }
    ],
    "source": [
     "# print sorted models\n",
-    "for model, num_params in sorted_models:\n",
-    "    print(f'{model}: {num_params / 1e6:.2f}M')\n",
+    "for model, params in sorted_models:\n",
+    "    print(f'{model}: {params[\"num_params\"] / 1e6:.2f}M')\n",
+    "\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "id": "b0c37469",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# save sorted_models to a json file\n",
+    "import json\n",
+    "\n",
+    "with open('sorted_models.json', 'w') as f:\n",
+    "    json.dump(sorted_models, f)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
