image error corrected

--- a/CIVEMSA2024_v1R/Civemsa2024.tex
+++ b/CIVEMSA2024_v1R/Civemsa2024.tex
@@ -78,7 +78,7 @@ Forensic anthropologists and odontologists are frequently asked to estimate the 
 	\subfigure[]{\includegraphics[width=0.37\textwidth]{img/16_f.eps}}
 	\subfigure[]{\includegraphics[width=0.37\textwidth]{img/21_f.eps}}\\
 	\subfigure[]{\includegraphics[width=0.18\textwidth]{img/16_dx.eps}}
-	\subfigure[]{\includegraphics[width=0.18\textwidth]{img/16_dx.eps}}	
+	\subfigure[]{\includegraphics[width=0.18\textwidth]{img/16_sx.eps}}	
 	\subfigure[]{\includegraphics[width=0.18\textwidth]{img/21_dx.eps}}
 	\subfigure[]{\includegraphics[width=0.18\textwidth]{img/21_sx.eps}}
 	\caption{Examples of orthopantomography images and images of third molars of the inferior arch: a) orthopantomography image acquired from a 16 years old individual; b) orthopantomography image acquired from a 21 years old individual; c) and d) enahnced regions of a) depicting the third molars of the inferior arch; e) and f) enahnced regions of b) depicting the third molars of the inferior arch. While the size of teeth is different between subjects, the shape of the third molars is different for underage and adult individuals.}
