thanks message error

--- a/CIVEMSA2024_v1R/Civemsa2024.tex
+++ b/CIVEMSA2024_v1R/Civemsa2024.tex
@@ -23,7 +23,7 @@
 
 \title{Deep Neural Networks for Assessing the \\ Age of Majority from\\ Panoramic Dental X-ray Images\\
 
-\thanks{Identify applicable funding agency here. If none, delete this.}
+% \thanks{Identify applicable funding agency here. If none, delete this.}
 }
 
 \author{
