example of table added

--- a/CIVEMSA2024_v1R/Civemsa2024.tex
+++ b/CIVEMSA2024_v1R/Civemsa2024.tex
@@ -28,7 +28,7 @@
 
 \author{
 	
-		\IEEEauthorblockN{Antonio Jos\'e Aragon Molina}
+		\IEEEauthorblockN{Antonio Jos\'e Arag\'on Molina}
 	\IEEEauthorblockA{\textit{Department of Computer Science} \\
 		\textit{Universit\`a degli Studi di Milano}\\
 		Milano, Italy \\
@@ -156,6 +156,31 @@ To simplify the segmentation and rotation processes, we developed a graphical us
 	\end{tabular}%
 	\label{tabDB}%
 \end{table}%
+
+\begin{table}[t]
+	\centering
+	\caption{}
+	\begin{tabular}{ccc}
+		\hline
+		\hline
+		architecture & from\_pretrained & data\_augmentation \\ 
+		\hline
+		resnet18 & True & True \\ 
+		resnet18 & True & True \\ 
+		resnet18 & True & True \\ 
+		resnet18 & True & True \\ 
+		resnet18 & True & True \\ 
+		resnet18 & True & True \\ 
+		resnet18 & True & True \\ 
+		resnet18 & True & True \\ 
+		resnet18 & True & True \\ 
+		resnet18 & True & True \\ 
+		\hline
+		\hline
+	\end{tabular}
+	\label{tab:hyperparameters}
+\end{table}
+	
 
 
 \subsection{Comparison with Forensic Odontologists}
